crates/nm-collect-ubiquiti/tests/snapshots/parsers__lbe-5ac-gen2-wa-8.7.22_uptime.snap
---
source: crates/nm-collect-ubiquiti/tests/parsers.rs
assertion_line: 124
expression: "parse::system::uptime(&read(\"uptime.txt\")).expect(concat!\n(\"uptime\", \" must parse\"))"
---
{
  "system": {
    "hostname": null,
    "model": null,
    "firmware": null,
    "uptime_seconds": 143400,
    "loadavg": null,
    "cpu_count": null,
    "memory": null,
    "serial": null,
    "ntp_servers": [],
    "offload": null,
    "ssh_host_key_changed": null,
    "ssh_legacy_algorithms": null,
    "cpu_load_pct": null,
    "genuine": null,
    "platform": null,
    "soc": null,
    "firmware_build": null,
    "board_id": null,
    "netrole": null
  },
  "interfaces": [],
  "addresses": [],
  "radio": null,
  "routing": null,
  "services": {
    "http": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "https": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "ssh": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "telnet": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "snmp": {
      "enabled": null,
      "port": null,
      "community_present": null,
      "community_is_default": null
    },
    "upnp": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "discovery": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "ntp": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "dhcp_client": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "dhcp_server": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "pppoe": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    }
  },
  "dhcp": null,
  "firewall": null,
  "config": null,
  "neighbors": []
}
