crates/nm-collect-ubiquiti/tests/snapshots/parsers__lbe-5ac-gen2-wa-8.7.22_version.snap
---
source: crates/nm-collect-ubiquiti/tests/parsers.rs
assertion_line: 72
expression: "parse::version::parse(&read(\"version.txt\")).expect(concat!\n(\"version\", \" must parse\"))"
---
{
  "platform": "WA",
  "soc": "",
  "version": "8.7.22",
  "build": ""
}
