crates/nm-collect-ubiquiti/tests/snapshots/parsers__synthetic-wa-8.7.11_arp.snap
---
source: crates/nm-collect-ubiquiti/tests/parsers.rs
expression: "parse::arp::parse(&read(\"arp.txt\")).unwrap()"
---
[
  {
    "protocol": "arp",
    "mac": "02:00:00:00:00:02",
    "address": "192.0.2.2",
    "hostname": null,
    "interface": "eth0"
  }
]
