crates/nm-collect-ubiquiti/tests/snapshots/parsers__synthetic-wa-8.7.11_iwconfig.snap
---
source: crates/nm-collect-ubiquiti/tests/parsers.rs
expression: "parse::iwconfig::parse(&read(\"iwconfig.txt\")).unwrap()"
---
{
  "system": {
    "hostname": null,
    "model": null,
    "firmware": null,
    "uptime_seconds": null,
    "loadavg": null,
    "cpu_count": null,
    "memory": null,
    "serial": null,
    "ntp_servers": [],
    "offload": null,
    "ssh_host_key_changed": null,
    "ssh_legacy_algorithms": null,
    "cpu_load_pct": null,
    "genuine": null,
    "platform": null,
    "soc": null,
    "firmware_build": null,
    "board_id": null,
    "netrole": null
  },
  "interfaces": [],
  "addresses": [],
  "radio": {
    "mode": null,
    "ssid": null,
    "frequency_mhz": 5805,
    "channel_width_mhz": null,
    "tx_power_dbm": null,
    "noise_floor_dbm": null,
    "chains": [],
    "ccq_pct": null,
    "airtime_pct": null,
    "tx_rate_mbps": 100.0,
    "rx_rate_mbps": null,
    "stations": [],
    "airmax": null,
    "distance_m": null,
    "mcs": null,
    "signal_dbm": -65,
    "polling_enabled": null,
    "mac": null,
    "throughput_mbps": null,
    "security": null,
    "ssid_hidden": null,
    "country_code": null,
    "country_obey": null
  },
  "routing": null,
  "services": {
    "http": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "https": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "ssh": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "telnet": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "snmp": {
      "enabled": null,
      "port": null,
      "community_present": null,
      "community_is_default": null
    },
    "upnp": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "discovery": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "ntp": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "dhcp_client": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "dhcp_server": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    },
    "pppoe": {
      "enabled": null,
      "port": null,
      "listen_addresses": []
    }
  },
  "dhcp": null,
  "firewall": null,
  "config": null,
  "neighbors": []
}
