crates/nm-collect-ubiquiti/tests/snapshots/parsers__synthetic-wa-8.7.11_merged.snap
---
source: crates/nm-collect-ubiquiti/tests/parsers.rs
assertion_line: 140
expression: facts
---
{
  "system": {
    "hostname": "fixture-host-1",
    "model": "Rocket Prism 5AC",
    "firmware": "8.7.11",
    "uptime_seconds": 183840,
    "loadavg": {
      "one_min": 0.1,
      "five_min": 0.2,
      "fifteen_min": 0.3
    },
    "cpu_count": null,
    "memory": {
      "total_bytes": 67108864,
      "available_bytes": null,
      "free_bytes": 46628864
    },
    "serial": null,
    "ntp_servers": [
      "192.0.2.10"
    ],
    "offload": null,
    "ssh_host_key_changed": null,
    "ssh_legacy_algorithms": null,
    "cpu_load_pct": 5.0,
    "genuine": true,
    "platform": "WA",
    "soc": "ar934x",
    "firmware_build": "33347",
    "board_id": "0xe005",
    "netrole": "bridge"
  },
  "interfaces": [
    {
      "name": "eth0",
      "mac": "02:00:00:00:00:01",
      "description": null,
      "admin_up": true,
      "oper_up": true,
      "speed_mbps": 1000,
      "duplex": "Full",
      "counters": {
        "rx_bytes": 1000,
        "tx_bytes": 2000,
        "rx_packets": 10,
        "tx_packets": 20,
        "rx_errors": 0,
        "tx_errors": 1,
        "rx_dropped": 0,
        "tx_dropped": 0
      },
      "addresses": [
        "192.0.2.1"
      ],
      "role": null,
      "role_confidence": null,
      "firewall_in": null,
      "firewall_out": null,
      "firewall_local": null
    }
  ],
  "addresses": [],
  "radio": {
    "mode": "Ap",
    "ssid": "fixture-ssid-1",
    "frequency_mhz": 5805,
    "channel_width_mhz": 40,
    "tx_power_dbm": 18,
    "noise_floor_dbm": -95,
    "chains": [
      {
        "chain": 0,
        "rssi_dbm": -60
      },
      {
        "chain": 1,
        "rssi_dbm": -62
      }
    ],
    "ccq_pct": 92,
    "airtime_pct": null,
    "tx_rate_mbps": 120.0,
    "rx_rate_mbps": 110.0,
    "stations": [
      {
        "mac": "02:00:00:00:00:02",
        "hostname": "fixture-host-2",
        "address": null,
        "model": null,
        "chains": [
          {
            "chain": 0,
            "rssi_dbm": -60
          },
          {
            "chain": 1,
            "rssi_dbm": -62
          }
        ],
        "ccq_pct": 93,
        "tx_rate_mbps": 120.0,
        "rx_rate_mbps": 110.0,
        "distance_m": 1300,
        "mcs": null,
        "signal_dbm": -60,
        "noise_floor_dbm": -95,
        "uptime_seconds": 900,
        "airmax": {
          "quality_pct": 90,
          "capacity_pct": 85,
          "priority": 2
        },
        "remote": {
          "hostname": "fixture-host-2",
          "platform": "XW",
          "version": "6.3.6",
          "signal_dbm": -61,
          "noise_floor_dbm": -96,
          "tx_power_dbm": 18,
          "rx_chainmask": 3
        },
        "counters": {
          "rx_bytes": 1000,
          "tx_bytes": 2000,
          "rx_packets": null,
          "tx_packets": null,
          "rx_errors": null,
          "tx_errors": null,
          "rx_dropped": null,
          "tx_dropped": null
        }
      }
    ],
    "airmax": {
      "quality_pct": 90,
      "capacity_pct": 85,
      "priority": 2
    },
    "distance_m": 1300,
    "mcs": null,
    "signal_dbm": -60,
    "polling_enabled": true,
    "mac": null,
    "throughput_mbps": null,
    "security": "wpa2",
    "ssid_hidden": false,
    "country_code": 608,
    "country_obey": true
  },
  "routing": {
    "routes": [
      {
        "prefix": "0.0.0.0",
        "protocol": null,
        "next_hop": "192.0.2.254",
        "interface": "eth0",
        "metric": null
      }
    ],
    "ospf_neighbors": [],
    "ospf_interfaces": [],
    "bgp_peers": [],
    "router_id": null,
    "protocol_counts": {}
  },
  "services": {
    "http": {
      "enabled": true,
      "port": 80,
      "listen_addresses": []
    },
    "https": {
      "enabled": true,
      "port": null,
      "listen_addresses": []
    },
    "ssh": {
      "enabled": true,
      "port": null,
      "listen_addresses": []
    },
    "telnet": {
      "enabled": false,
      "port": null,
      "listen_addresses": []
    },
    "snmp": {
      "enabled": true,
      "port": null,
      "community_present": true,
      "community_is_default": null
    },
    "upnp": {
      "enabled": false,
      "port": null,
      "listen_addresses": []
    },
    "discovery": {
      "enabled": false,
      "port": null,
      "listen_addresses": []
    },
    "ntp": {
      "enabled": true,
      "port": null,
      "listen_addresses": []
    },
    "dhcp_client": {
      "enabled": true,
      "port": null,
      "listen_addresses": []
    },
    "dhcp_server": {
      "enabled": false,
      "port": null,
      "listen_addresses": []
    },
    "pppoe": {
      "enabled": false,
      "port": null,
      "listen_addresses": []
    }
  },
  "dhcp": null,
  "firewall": {
    "rule_sets": [],
    "nat_rules": [],
    "enabled": false,
    "vendor_fields": {
      "enabled": false
    }
  },
  "config": {
    "format": "KeyValue",
    "text": "sshd.status=enabled\ntelnetd.status=disabled\nhttpd.status=enabled\nhttpd.https.status=enabled\nhttpd.port=80\nsnmp.status=enabled\nsnmp.community=<redacted>\ndiscovery.status=disabled\nntpclient.status=enabled\nntpclient.1.server=192.0.2.10\nupnpd.status=disabled\nnetmode=bridge\nwireless.1.ssid=fixture-ssid-1\nwireless.1.security=wpa2\nwireless.1.hide_ssid=disabled\nradio.1.freq=5805\nradio.1.chanbw=20\nradio.1.txpower=18\nradio.1.countrycode=608\nradio.1.obey=enabled\nusers.1.name=operator\nusers.1.password=<redacted>\nresolv.host.1.name=fixture-host-1\nnetconf.1.devname=eth0\nnetconf.1.ip=192.0.2.1\nnetconf.1.netmask=255.255.255.0\nnetconf.1.status=enabled\nroute.1.ip=0.0.0.0\nroute.1.gateway=192.0.2.254\nroute.1.devname=eth0\n",
    "secrets_removed": 0
  },
  "neighbors": [
    {
      "protocol": "arp",
      "mac": "02:00:00:00:00:02",
      "address": "192.0.2.2",
      "hostname": null,
      "interface": "eth0"
    }
  ]
}
